src/main/grammatik.txt
machma           -> ('machma' '(' argument ')' 'dat' expression 'haltstopp')*

expression       -> 'goenndir' goenndir right_expression | 'gibihm' gibihm right_expression | 
                    'rufma' rufma right_expression | 'watwenn' watwenn conditionbranch expression | 'hauraus' hauraus | ε

goenndir         -> symbol 'ist' symbol | symbol 'ist' term | symbol 'ist' string

gibihm           -> symbol 'ist' symbol | symbol 'ist' term | symbol 'ist' string

hauraus          -> num | symbol | string

argument         -> symbol | ε

rufma            -> symbol '(' num ')' 'raus' symbol | symbol '(' string ')' 'raus' symbol |
                    symbol '(' symbol ')' 'raus' symbol | symbol '(' ε ')' 'raus' symbol

watwenn          -> '(' comparison ')'

comparison       -> num comp num | symbol comp num | num comp symbol | symbol comp symbol

conditionbranch  -> 'dann' expression right_expression 'haltstopp'

comp             -> '<' | '>' | '=='| '>=' | '<='

symbol           -> 'input:sign'

string           -> 'input:sign'

term             -> operator right_term

operator         -> '(' term right_expression ')' | num

right_term       -> '*' operator rightTerm | '/' operator rightTerm | Epsilon

right_expression -> '+' term right_expression | '-' term right_expression | 'comparison' term right_expression  | expression

num              -> 'input:sign'
